Fix Java warnings in com.ibm.ws.kernel.boot.nested